Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,15 +149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    destination = \n",
-    "    travel_destination\n",
-    "    return 'madagascar'"
+    "    destination = 'madagascar'\n",
+    "    travel_destinations.append(destination)\n",
+    "    return deestination"
    ]
   },
   {
