Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    new_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        destination.title()"
+    "        new_countries.adestination.title()"
    ]
   },
   {
