--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,9 @@
     "def capitalize_countries():\n",
     "    new_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        new_countries.adestination.title()"
+    "        new_countries.append(destination.title())\n",
+    "    \n",
+    "        "
    ]
   },
   {
