Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,10 +224,10 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    new_countries = []\n",
+    "    countries = []\n",
     "    for destination in travel_destinations:\n",
     "        new_countries.append(destination.title())\n",
-    "    \n",
+    "    return new_countries\n",
     "        "
    ]
   },
